Fix BitMenuButton and BitDropdown demo on iOS #8425

--- a/src/BlazorUI/Demo/Client/Bit.BlazorUI.Demo.Client.Core/Pages/Components/Inputs/Dropdown/BitDropdownDemo.razor.scss
+++ b/src/BlazorUI/Demo/Client/Bit.BlazorUI.Demo.Client.Core/Pages/Components/Inputs/Dropdown/BitDropdownDemo.razor.scss
@@ -45,6 +45,7 @@
         backdrop-filter: blur(20px);
         background-color: transparent;
         box-shadow: darkgray 0 0 0.5rem;
+        -webkit-backdrop-filter: blur(20px);
     }
 
     .custom-container, .custom-container:after {
